[workspace]
resolver = "3"
members = ["kafka-demo", "mea-demo","minigrep", "tokio-demo", "web-server"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bewaremypower/rust-lab"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
