[package]
name = "kafka-demo"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
logforth = { version = "0.29.1", features = ["starter-log"] }
rdkafka = { version = "0.37.0", features = ["ssl"] }
tokio.workspace = true
