[package]
name = "tokio-demo"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
chrono = "0.4.41"
